# gtk-c-boilerplate

./: CMakeLists.txt  README.md  main.c
